fix: fragment spacing

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ body {
     flex-direction: column;
     font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
-    height: 100vh;
 }
 
 ul {
@@ -29,8 +28,6 @@ li:hover {
 a {
     color: var(--font-color);
     display: block;
-    height: 100%;
     padding: 1rem;
     text-decoration: none;
-    width: 100%;
 }
